Refactor: Extract method to fetch and persist new earthquake events for reusability and clarity